# vietnam_AI_hackathon

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-cloud.txt
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
.github/workflows/: ci.yml
.mongo/: mongo.log.2026-07-18T09-25-20  mongo.log.2026-07-18T09-26-00  mongo.log.2026-07-18T09-26-27
.mongo/data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-13612328970840864376.wt  collection-2-13612328970840864376.wt  collection-4-13612328970840864376.wt  collection-49-13612328970840864376.wt  index-1-13612328970840864376.wt  index-3-13612328970840864376.wt  index-5-13612328970840864376.wt  index-50-13612328970840864376.wt  index-51-13612328970840864376.wt  index-52-13612328970840864376.wt  index-53-13612328970840864376.wt  index-6-13612328970840864376.wt  sizeStorer.wt
.mongo/data/diagnostic.data/: metrics.2026-07-18T09-26-28Z-00000  metrics.interim
Html/: AIvn.css  AIvn.html  credits.html
Html template/: AIvn.css  Template.html
configs/: debug.yaml  default_ontology.yaml  example_source_manifest.yaml  pipeline.yaml  vietnamese.yaml  vietnamese_fast.yaml  vietnamese_global_quality.yaml  vietnamese_global_source_manifest.example.yaml  vietnamese_quality.yaml  vietnamese_scraped.yaml
configs/evaluation/: overnight_vi.yaml  vietnamese_global_eval.yaml
configs/pipelines/: debug.yaml  default.yaml  vietnamese.yaml  vietnamese_global_quality.yaml
data/add/: vn_web_10.jsonl  vn_web_50.jsonl
data/debugg_sample/: alan_turing.jsonl  marie_curie.jsonl
data/debugg_sample_vi/: vietnamese_examples.jsonl
data/demo/: curation_a.jsonl  curation_b.jsonl  vietnamese_incremental.jsonl
data/download_data/: llm_cleaner.py  scraper.py  wikipedia.py
data/download_data/seeds/: discovered_urls.txt  vietnamese_sources.txt
data/sample/: alan_turing.txt  marie_curie.txt
data/samples/: sample_kg.graphml  sample_kg.json
data/scraped/vn_web_10/: vn_web_10_audit.csv  vn_web_10_manifest.yaml
data/scraped/vn_web_10_test/: vn_web_10_test_manifest.yaml
data/scraped/vn_web_50/: vn_web_50_audit.csv  vn_web_50_manifest.yaml
data/wikipedia/: wikipedia_en_5.jsonl  wikipedia_en_500_manifest.yaml  wikipedia_en_5_manifest.yaml  wikipedia_vi_10.jsonl  wikipedia_vi_10_manifest.yaml  wikipedia_vi_2.jsonl  wikipedia_vi_2_manifest.yaml  wikipedia_vi_50.jsonl  wikipedia_vi_50_manifest.yaml
demo/: README.md  app.js  index.html  settings.css  styles.css
docs/: UV_SETUP.md  architecture.md  dataset_curation.md  deduplication_experiments.md  how_to_create_a_knowledge_graph.md  input_data_format.md  usage.md  uv_setup.md  vietnamese_global_graph_runbook.md  wikipedia_dataset.md
docs/vietnamese_kg_pitch_original_plus_pipeline/: pitch.css  pitch.js
evaluation/: __init__.py  eval_config.yaml  run_eval.py  run_eval_colab.ipynb
evaluation/data_eval/: __init__.py  coverage.py  neo4j_auditor.py  sft_evaluator.py  sft_generator.py  structural_audit.py
evaluation/graphgen/: README.md  __init__.py  qa_generator.py
evaluation/model_eval/: COLAB_SETUP.md  __init__.py  dataset_gen.py  finetune.py  finetune_gpu.py  metrics.py  run_eval_colab.ipynb  run_eval_local.ipynb
generate_plots/: __init__.py  __main__.py  cli.py  plot_ablation.py  plot_coverage.py  plot_sft_quality.py  plot_structural.py  plot_training.py
generated_KGs/output_debug/: knowledge_graph.json  metrics.json
generated_KGs/output_small/: knowledge_graph.graphml  knowledge_graph.json  metrics.json
generated_KGs/output_small_add/: knowledge_graph.graphml  knowledge_graph.json  metrics.json
generated_KGs/output_test/: knowledge_graph.json  metrics.json
generated_KGs/output_test2/: knowledge_graph.json  metrics.json
generated_KGs/output_wikipedia/: knowledge_graph.graphml  metrics.json
generated_KGs/output_wikipedia/neo4j_import/: nodes.csv  relationships.csv
help_files/: Problem_description.md  data_management_survey_summary.md  hackathon_scoring.md  understanding_method1_plots.md
help_files/markdown_files/: dataset_curation.md  deduplication_experiments.md  evaluation_pipeline_plan.md  scoring_maximization_plan.md  vietnamese_global_graph_runbook.md
output_debug/: knowledge_graph.graphml
output_eval/: latest
output_eval/2026-07-18_19-37-50/method1/: coverage_report.json  method1_results.json  sft_quality_report.json
output_eval/method1/: coverage_report.json  method1_results.json  sft_quality_report.json  sft_sample.jsonl  structural_audit.json
output_eval/method2/: kg_qa_test.jsonl  kg_qa_train.jsonl  method2_results.json  raw_qa_test.jsonl
output_eval/overnight/20260718_205637/: PLANNED  experiment.env  qwen2.5-0.5b.planned  qwen2.5-1.5b.planned
output_small/: knowledge_graph.graphml  knowledge_graph.json  metrics.json
output_test/: knowledge_graph.graphml
output_test2/: knowledge_graph.graphml  knowledge_graph.json  metrics.json
pitch/: index.html  pitch.css
pitch/vietnamese_kg_pitch_original_plus_pipeline/: index.html
presentation/vietnamese_kg_pitch_original_plus_pipeline/: index.html
project_pitch/demo/: app.js  index.html  settings.css  styles.css
project_pitch/presentation/: index.html
saved_sessions/1/: 2026-07-17_3d0ac994.md  2026-07-17_9dedde23.md  2026-07-17_c5573d92.md  2026-07-17_e4319914.md  3d0ac994-0280-49a4-a651-a496e2d9c806.jsonl  c5573d92-44f7-4c4e-8d5d-11fb06addf54.jsonl  dd24a3b5-7bd9-4ff5-9794-42e1c7848478.jsonl
saved_sessions/victor/: export_sessions.py
scripts/: run_method2_overnight.sh  run_method2_overnight_gpu.sh
src/kg_generator/: README.md  __init__.py  api.py  cli.py  config.py  identity.py  pipeline.py
tests/: test_api.py  test_backend_api_v2.py  test_cli_language.py  test_curation.py  test_export.py  test_extract.py  test_graph.py  test_graphgen_evaluation.py  test_identity.py  test_ingest.py  test_model_eval_fairness.py  test_vietnamese_pipeline.py  test_wikipedia_downloader.py
(+120 files in other folders)
