[project]
name = "kg-generator"
version = "0.1.0"
description = "A tool for generating knowledge bases to support LLM training and Graph RAG workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Vietnam AI Challenge" }
]

dependencies = [
    "spacy>=3.7",
    "networkx>=3.2",
    "datasketch>=1.6",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "textstat>=0.7",
    "pandas>=2.1",
]

[project.optional-dependencies]
# Embedding-based entity resolution (recommended)
embeddings = [
    "sentence-transformers>=2.2",
]
# Auditable, multilingual LLM corpus curation. faiss-cpu works everywhere;
# cloud CUDA images may replace it with their matching FAISS GPU build.
curation = [
    "underthesea>=1.4",
    "sentence-transformers>=2.2",
    "transformers>=4.45",
    "ftfy>=6.2",
    "faiss-cpu>=1.8",
]
dev = [
    "pytest>=8.0",
]
# Vietnamese NLP support (install when switching to vi)
vi = [
    "underthesea>=9.5,<10",
]
# Public dataset download and streaming
data = [
    "datasets>=3.0",
]
# Web scraping for LLM dataset collection (robots.txt compliant, sitemap/crawl discovery)
scraper = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "trafilatura>=1.12",
]
# MongoDB document archive (versioned storage for all ingested documents)
mongo = [
    "pymongo>=4.8",
]
# Graph DB export support
neo4j = [
    "neo4j>=5.15",
]
# LLM-based extraction
llm = [
    "openai>=1.6",
    "langchain>=0.1",
]
# All extras
all = [
    "kg-generator[embeddings,curation,vi,data,scraper,neo4j,llm,dev,eval-data,eval-model]",
]
# Evaluation — data_eval: SFT data quality (lightweight, works everywhere)
eval-data = [
    "deepeval>=2.0",
    "sentence-transformers>=2.2",
]
# Evaluation — model_eval: fine-tuning ablation (Colab GPU only — NOT for Mac)
eval-model = [
    "kg-generator[eval-data]",
    "transformers>=4.45",
    "peft>=0.12",
    "accelerate>=0.34",
    "bitsandbytes>=0.44",
    "torch>=2.4",
]

[project.scripts]
kg-gen = "kg_generator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
markers = [
    "integration: requires externally installed models or CUDA resources",
]
