[project]
name = "kg-generator"
version = "0.1.0"
description = "A tool for generating knowledge bases to support LLM training and Graph RAG workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Vietnam AI Challenge" }
]

dependencies = [
    "spacy>=3.7",
    "networkx>=3.2",
    "datasketch>=1.6",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "textstat>=0.7",
    "pandas>=2.1",
]

[project.optional-dependencies]
# Embedding-based entity resolution (recommended)
embeddings = [
    "sentence-transformers>=2.2",
]
# Auditable, multilingual LLM corpus curation. faiss-cpu works everywhere;
# cloud CUDA images may replace it with their matching FAISS GPU build.
curation = [
    "underthesea>=1.4",
    "sentence-transformers>=2.2",
    "transformers>=4.45",
    "ftfy>=6.2",
    "faiss-cpu>=1.8",
]
dev = [
    "pytest>=8.0",
]
# Vietnamese NLP support (install when switching to vi)
vi = [
    "underthesea>=9.5,<10",
]
# Public dataset download and streaming
data = [
    "datasets>=3.0",
]
# Web scraping for LLM dataset collection (robots.txt compliant, sitemap/crawl discovery)
scraper = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "trafilatura>=1.12",
]
# Graph DB export support
neo4j = [
    "neo4j>=5.15",
]
# LLM-based extraction
llm = [
    "openai>=1.6",
    "langchain>=0.1",
]
# All extras
all = [
    "kg-generator[embeddings,curation,vi,data,scraper,neo4j,llm,dev,eval-data,eval-model]",
]
# Evaluation — data_eval: SFT data quality (lightweight, works everywhere)
eval-data = [
    "deepeval>=2.0",
    "sentence-transformers>=2.2",
]
# Evaluation — model_eval: fine-tuning ablation (Colab GPU only — NOT for Mac)
eval-model = [
    "kg-generator[eval-data]",
    "transformers>=4.45",
    "peft>=0.12",
    "accelerate>=0.34",
    "bitsandbytes>=0.44",
    "torch>=2.4",
]

[project.scripts]
kg-gen = "kg_generator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "B008",  # do-not-perform-function-calls-in-argument-defaults
]

[tool.ruff.lint.isort]
known-first-party = ["kg_generator"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.coverage.run]
source = ["src/kg_generator"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "if settings\\.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
